fixed collapse

--- a/css/memory.css
+++ b/css/memory.css
@@ -122,7 +122,7 @@
 @media screen and (max-width: 768px){   
               
    body{
-       padding-top: 220px;
+       padding-top: 70px;
    }
 
    .gameContainer {
